syntax = "proto3";

package service;

option go_package = "testing/backend/first_service/proto";

service Service {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string naam = 1;
}

message HelloResponse {
    string message = 1;
}